<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:id="@+id/root_view"
    tools:context=".ui.login.MainActivity"

    >

    <ImageView
        android:id="@+id/image_food_icon"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:contentDescription="@null"
        android:layout_centerInParent="true"
        android:src="@drawable/icon_oder"
        />
    <TextView
        android:id="@+id/text_oder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="oderfood"
        android:layout_below="@+id/image_food_icon"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorSplashText"
        android:layout_marginTop="@dimen/dp_5"
        android:textSize="@dimen/sp_16"/>
    <ProgressBar
        android:id="@+id/progress_loading"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-4dp"
        android:foregroundGravity="bottom"
        android:indeterminate="true"
        android:padding="0dp"
        android:theme="@style/ProgressBarStyle"/>
    
    <RelativeLayout
        android:id="@+id/after_animation_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="@dimen/dp_20"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_130"
        android:visibility="gone"
        >
        <TextView
            android:id="@+id/text_welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:textColor="@color/colorBackground"
            android:textSize="@dimen/sp_25"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/text_eat_it_together"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_welcome"
            android:layout_marginTop="10dp"
            android:text="@string/eat_it_together"
            android:textColor="@color/colorAccent"
            android:textSize="15sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/loginButton"
            android:layout_below="@+id/text_eat_it_together"
            android:gravity="center"
            android:orientation="vertical">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_emaill"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:textColor="@color/colorTextView"
                android:textColorHint="@color/colorAccent"
                android:textSize="15sp" />

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="@color/colorTextView"
                android:textColorHint="@color/colorAccent"
                android:textSize="15sp" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="5dp">

                <TextView
                    android:id="@+id/text_sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:textColor="@color/colorTextView"
                    android:textSize="14sp"
                    android:textStyle="bold" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:text="@string/forget_password"
                    android:textColor="@color/colorTextView"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </FrameLayout>

        </LinearLayout>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_above="@+id/skipTextView"
            android:layout_marginBottom="5dp"
            android:background="@drawable/button"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/skipTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/skip"
            android:textColor="@color/colorTextView"
            android:textSize="15sp" />
        
    </RelativeLayout>



</RelativeLayout>